docs-archive/apache-airflow-providers-teradata/3.3.1/_sources/_api/airflow/providers/teradata/utils/tpt_util/index.rst.txt
airflow.providers.teradata.utils.tpt_util
=========================================

.. py:module:: airflow.providers.teradata.utils.tpt_util


Classes
-------

.. autoapisummary::

   airflow.providers.teradata.utils.tpt_util.TPTConfig


Functions
---------

.. autoapisummary::

   airflow.providers.teradata.utils.tpt_util.execute_remote_command
   airflow.providers.teradata.utils.tpt_util.write_file
   airflow.providers.teradata.utils.tpt_util.secure_delete
   airflow.providers.teradata.utils.tpt_util.remote_secure_delete
   airflow.providers.teradata.utils.tpt_util.terminate_subprocess
   airflow.providers.teradata.utils.tpt_util.get_remote_os
   airflow.providers.teradata.utils.tpt_util.set_local_file_permissions
   airflow.providers.teradata.utils.tpt_util.set_remote_file_permissions
   airflow.providers.teradata.utils.tpt_util.get_remote_temp_directory
   airflow.providers.teradata.utils.tpt_util.verify_tpt_utility_installed
   airflow.providers.teradata.utils.tpt_util.verify_tpt_utility_on_remote_host
   airflow.providers.teradata.utils.tpt_util.prepare_tpt_ddl_script
   airflow.providers.teradata.utils.tpt_util.decrypt_remote_file
   airflow.providers.teradata.utils.tpt_util.transfer_file_sftp


Module Contents
---------------

.. py:class:: TPTConfig

   Configuration constants for TPT operations.


   .. py:attribute:: DEFAULT_TIMEOUT
      :value: 5



   .. py:attribute:: FILE_PERMISSIONS_READ_ONLY
      :value: 256



   .. py:attribute:: TEMP_DIR_WINDOWS
      :value: 'C:\\Windows\\Temp'



   .. py:attribute:: TEMP_DIR_UNIX
      :value: '/tmp'



.. py:function:: execute_remote_command(ssh_client, command)

   Execute a command on remote host and properly manage SSH channels.

   :param ssh_client: SSH client connection
   :param command: Command to execute
   :return: Tuple of (exit_status, stdout, stderr)


.. py:function:: write_file(path, content)

.. py:function:: secure_delete(file_path, logger = None)

   Securely delete a file using shred if available, otherwise use os.remove.

   :param file_path: Path to the file to be deleted
   :param logger: Optional logger instance


.. py:function:: remote_secure_delete(ssh_client, remote_files, logger = None)

   Securely delete remote files via SSH. Attempts shred first, falls back to rm if shred is unavailable.

   :param ssh_client: SSH client connection
   :param remote_files: List of remote file paths to delete
   :param logger: Optional logger instance


.. py:function:: terminate_subprocess(sp, logger = None)

   Terminate a subprocess gracefully with proper error handling.

   :param sp: Subprocess to terminate
   :param logger: Optional logger instance


.. py:function:: get_remote_os(ssh_client, logger = None)

   Detect the operating system of the remote host via SSH.

   :param ssh_client: SSH client connection
   :param logger: Optional logger instance
   :return: Operating system type as string ('windows' or 'unix')


.. py:function:: set_local_file_permissions(local_file_path, logger = None)

   Set permissions for a local file to be read-only for the owner.

   :param local_file_path: Path to the local file
   :param logger: Optional logger instance
   :raises FileNotFoundError: If the file does not exist
   :raises OSError: If setting permissions fails


.. py:function:: set_remote_file_permissions(ssh_client, remote_file_path, logger = None)

   Set permissions for a remote file to be read-only for the owner.

   :param ssh_client: SSH client connection
   :param remote_file_path: Path to the remote file
   :param logger: Optional logger instance
   :raises RuntimeError: If permission setting fails


.. py:function:: get_remote_temp_directory(ssh_client, logger = None)

   Get the remote temporary directory path based on the operating system.

   :param ssh_client: SSH client connection
   :param logger: Optional logger instance
   :return: Path to the remote temporary directory


.. py:function:: verify_tpt_utility_installed(utility)

   Verify if a TPT utility (e.g., tbuild) is installed and available in the system's PATH.


.. py:function:: verify_tpt_utility_on_remote_host(ssh_client, utility, logger = None)

   Verify if a TPT utility (tbuild) is installed on the remote host via SSH.

   :param ssh_client: SSH client connection
   :param utility: Name of the utility to verify
   :param logger: Optional logger instance
   :raises FileNotFoundError: If utility is not found on remote host
   :raises RuntimeError: If verification fails unexpectedly


.. py:function:: prepare_tpt_ddl_script(sql, error_list, source_conn, job_name = None)

   Prepare a TPT script for executing DDL statements.

   This method generates a TPT script that defines a DDL operator and applies the provided SQL statements.
   It also supports specifying a list of error codes to handle during the operation.

   :param sql: A list of DDL statements to execute.
   :param error_list: A list of error codes to handle during the operation.
   :param source_conn: Connection details for the source database.
   :param job_name: The name of the TPT job. Defaults to unique name if None.
   :return: A formatted TPT script as a string.
   :raises ValueError: If the SQL statement list is empty.


.. py:function:: decrypt_remote_file(ssh_client, remote_enc_file, remote_dec_file, password, logger = None)

   Decrypt a remote file using OpenSSL.

   :param ssh_client: SSH client connection
   :param remote_enc_file: Path to the encrypted file
   :param remote_dec_file: Path for the decrypted file
   :param password: Decryption password
   :param logger: Optional logger instance
   :return: Exit status of the decryption command
   :raises RuntimeError: If decryption fails


.. py:function:: transfer_file_sftp(ssh_client, local_path, remote_path, logger = None)

   Transfer a file from local to remote host using SFTP.

   :param ssh_client: SSH client connection
   :param local_path: Local file path
   :param remote_path: Remote file path
   :param logger: Optional logger instance
   :raises FileNotFoundError: If local file does not exist
   :raises RuntimeError: If file transfer fails


